--- a/React/feedback-app/src/index.css
+++ b/React/feedback-app/src/index.css
@@ -43,7 +43,7 @@ header {
 
 .card.reverse {
   background-color: rgba(0, 0, 0, 0.4);
-  color: #fff;
+  color: beige;
 }
 
 .card h2 {
@@ -56,6 +56,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  color: black;
   margin: 30px 0 40px;
 }
 
